--- a/_profiles/anantara-zh.html
+++ b/_profiles/anantara-zh.html
@@ -3,7 +3,7 @@
 # The human-friendly name of the profile. Whenever you're asked for the profile
 # ID, it refers to the name of the profile file — in this case, "default".
 #
-name: "Staging Anantara Homepage"
+name: "Anantara Singapore"
 
 #
 # The default profile will be the one shown when accessing the root URL of your
@@ -26,12 +26,12 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "NewYork:Chrome"
+  location: "Beijing2:Firefox"
   runs: 1
-  url: "https://staging.anantara.com/en"
+  url: "https://www.anantara.com/zh"
   video: true
-
-
+#  mobile: true
+#  device: "iPhoneX"
 #
 # The URL of the WebPageTest instance to be used with this profile. Please note that
 # if you decide to encrypt this URL, the filmstrip section will not be displayed.
