--- a/_profiles/anantara-zh.html
+++ b/_profiles/anantara-zh.html
@@ -26,7 +26,7 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "Beijing2"
+  location: "Beijing"
   runs: 1
   url: "https://www.anantara.com/zh"
   video: true
