--- a/_profiles/oaks-zh.html
+++ b/_profiles/oaks-zh.html
@@ -26,7 +26,7 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "HongKong:Chrome"
+  location: "Beijing2_CN:Firefox"
   runs: 1
   url: "https://www.oakshotels.com.cn/"
   video: true
