--- a/_profiles/anantara-australia.html
+++ b/_profiles/anantara-australia.html
@@ -26,7 +26,7 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "ec2-ap-southeast-2"
+  location: "Sydney3:Firefox"
   runs: 1
   url: "https://www.anantara.com/en/"
   video: true
