--- a/_profiles/anantara-australia.html
+++ b/_profiles/anantara-australia.html
@@ -25,8 +25,8 @@ interval: 12
 # https://www.npmjs.com/package/webpagetest
 #
 parameters:
-  connectivity: "Cable"
-  location: "Sydney3:Firefox"
+  connectivity: "DSL"
+  location: "Sydney3"
   runs: 1
   url: "https://www.anantara.com/en/"
   video: true
