--- a/_profiles/anantara-kihavah-mobile.html
+++ b/_profiles/anantara-kihavah-mobile.html
@@ -25,8 +25,8 @@ interval: 12
 # https://www.npmjs.com/package/webpagetest
 #
 parameters:
-  connectivity: "Cable"
-  location: "Dulles_iPhone6:iOS 12"
+#  connectivity: "Cable"
+  location: "Dulles_iPhone6:iPhone 6 iOS 12.Cable"
   runs: 1
   url: "https://www.anantara.com/en/kihavah-maldives"
   video: true
