--- a/_profiles/anantara-london.html
+++ b/_profiles/anantara-london.html
@@ -26,7 +26,7 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "London2:Chrome"
+  location: "Dulles:Chrome"
   runs: 1
   url: "https://www.anantara.com/en/"
   video: true
