--- a/_profiles/anantara-dubai.html
+++ b/_profiles/anantara-dubai.html
@@ -26,7 +26,7 @@ interval: 12
 #
 parameters:
   connectivity: "DSL"
-  location: "Dubai:Firefox"
+  location: "Dubai:Chrome"
   runs: 1
   url: "https://www.anantara.com/en/"
   video: true
