--- a/_profiles/anantara-newyork.html
+++ b/_profiles/anantara-newyork.html
@@ -26,7 +26,7 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "NewYork:Chrome"
+  location: "ec2-us-east-1:Chrome"
   runs: 1
   url: "https://www.anantara.com/en/"
   video: true
